	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1030)
 * fix: introduced alphanumeric restriction in the shebang variables (must
   begin with underscore or alphabetic, continue with underscore or alphanumeric).
# (r1027)
 * Keys '(' and ')' are now bound respectively to "goto '^p'" and "goto '$p'";
   that is jump to first or last page.
# (r1026)
 * available symkeys are now documented in a section of man fimrc.
# (r1025,r1028)
 * fix: cleaned up the internal keysyms initialization code.
# (r1019)
# TODO: not yet active
 * support for glob fnmatch wordexp...
# (r1021)
 * switch -k --keysym-press <keysym> to execute simulated press of keysym at startup.
# (r1018)
 * added command line switch  -/  <pattern> as short for -c /<pattern>.
 * added command line switch --// <pattern> as short for -c /<pattern> with _re_search_opts='f'.
# (r1015)
 * will emit a status message when limiting long lists.
# (r1014)
 * Default key for 'scrollforward' is now space (' ') instead of 's'.
# (r1013)
 * introduced context prepend/append shebang syntax "#!fim:^=" and "#!fim:+=" in description files.
   (FIXME: undocumented)
# (r1011)
 * fix: removed obsolete documentation for the "window" command, now disabled.
# (r1010)
 * introduced the 'list "swap"' command.
# (r1009)
 * bugfix: repeating "recording 'repeat_last'" (default '.' key) by prepending a number now works.
# (r1008)
 * switch --read-from-stdin-elds supports now the ASCII NUL terminator (via '').
# (r1007)
 * switch -V (--version) will print out libspectre version info.
# (r1006)
 * switch -V (--version) will print to stdout (not anymore to stderr).
# (r1004)
 * introduced 'list "dumpmarked"' and 'list "unmarkall"' commands.
# (r1003)
 * the -B switch is now short for --background-recursive.
# (r1002)
 * the -S switch is now short for --image-descriptions-file-separator (not anymore for --sanity-check).
# (r1001)